# thsr-ticket-rs

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: cli.rs  lib.rs  main.rs  schema.rs
