[package]
name = "thsr"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "cookies",
    "gzip",
    "rustls-tls",
] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.1", features = ["derive"] }
